[metadata]
name = DiscordBlogBot
description = Bot that posts new blog post announcements in given discord channel.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darkshoxx/DiscordBlogBot
author = darkshoxx
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_reqires = >= 3.7
include_package_data = True
platforms = windos, linux
zip_safe = True

[options.extras_require]
testing =
    coverage
    pytest
    pytest-mock
